Make Maven run configuration portable